update email credentials and recipient address

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL_USER=giftworld325@gmail.com
-EMAIL_PASS=ascc etzc bzcw xatj
+EMAIL_USER=acb.unapologetic@gmail.com
+EMAIL_PASS=hosl haro njpn cdwq
